Style changes to modal boxes to accomodate overflow and javascript timer calculations to display correct wpm when over 1minute

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -4,12 +4,11 @@ body {
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    background-color: white;
     font-family: "Raleway", sans-serif;
     color: #445361;
     text-align: center;
     align-content: center;
-
+    background-image: url("..images/minimalistic_background.jpg") no-repeat center center / cover;
     }
 
 .heading {
@@ -21,23 +20,9 @@ body {
 
 h1 {
     font-size: 2.5rem;
-    color: #404244;
-
-    
+    color: #404244; 
 }
 
-h2 {
-    font-size: 2rem;
-    color: #404244;
-    margin: 1rem 0;
-
-}
-
-h3 {
-    font-size: 1.25rem;
-    color: #404244;
-    margin: 0.5rem 0;
-}
 
 .logo {
     margin: auto;
@@ -76,9 +61,9 @@ h3 {
 }
 
 .characters {
-    width: 3rem;
-    height: 4rem;
-    margin: 0.5rem 0.5rem;
+    width: 2rem;
+    height: 3rem;
+    margin: 0.75rem 0.75rem;
     font-size: 2rem;
     font-family: Arial, Helvetica, sans-serif;
     color: rgb(56, 56, 56);
@@ -92,7 +77,7 @@ h3 {
     justify-content: space-between;
     width: 85%;
     max-width: 830px;
-    margin: 1rem auto;
+    margin: 0.5rem auto;
     font-size: 1.5rem;
 }
 
@@ -111,12 +96,14 @@ h3 {
 .scores {
     margin: 0;
     padding: 1rem;
+    font-size: 1.5rem;
     
 }
 
 #keyboard-display {
     color: rgb(56, 56, 56);
     margin: 0;
+    font-size: 1.25rem;
     padding: 1rem;
 }
 
@@ -177,7 +164,7 @@ h3 {
 .keyboard-image {
     display: none;
     max-width: 850px;
-    width: 100%;
+    width: 80%;
     margin: 2rem auto;
 }
 
@@ -229,37 +216,37 @@ h3 {
 }
 
 #star-one {
-    height: 5rem;
-    width: 5rem;
-    font-size: 5rem;
+    height: 4.5rem;
+    width: 4.5rem;
+    font-size: 4.5rem;
     text-align: center;
-    margin: 0 0.5rem;
+    margin: 0 0.75rem;
     color: #dfdfdf;
-    -webkit-text-stroke: 2px #d4d4d4;
+    -webkit-text-stroke: 1px #ffffff;
     text-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
 }
 
 #star-two {
-    height: 5rem;
-    width: 5rem;
-    font-size: 5rem;
+    height: 4.5rem;
+    width: 4.5rem;
+    font-size: 4.5rem;
     position: relative;
-    top: -15%;
+    top: -30%;
     text-align: center;
-    margin: 0 0.5rem;
+    margin: 0 0.75rem;
     color: #dfdfdf;
-    -webkit-text-stroke: 2px #d4d4d4;
+    -webkit-text-stroke: 1px #ffffff;
     text-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
 }
 
 #star-three {
-    height: 5rem;
-    width: 5rem;
-    font-size: 5rem;
+    height: 4.5rem;
+    width: 4.5rem;
+    font-size: 4.5rem;
     text-align: center;
-    margin: 0 0.5rem;
+    margin: 0 0.75rem;
     color: #dfdfdf;
-    -webkit-text-stroke: 2px #d4d4d4;
+    -webkit-text-stroke: 1px #ffffff;
     text-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
 }
 
@@ -271,6 +258,13 @@ h3 {
     width: 80%;
 }
 
+#score-modal h2 {
+    font-size: 2rem;
+    margin-top: 1rem;
+    margin-bottom: 0.5rem;
+
+}
+
 .modal-scores {
     font-size: 1.5rem;
     margin: 0.5rem 0.5rem;
@@ -279,6 +273,11 @@ h3 {
 #modal-wpm {
     color: blue;
     font-weight: bold;
+}
+
+#modal-button-container h3 {
+    font-size: 1rem;
+    margin: 0.5rem auto;
 }
 
 #modal-button-container {
@@ -295,7 +294,7 @@ h3 {
 }
 
 #change-difficulty {
-    background-color: #eeeeee;
+    background-color: #88c7cc36;
     border-radius: 1rem;
     padding: 0.5rem 1rem;
 }
@@ -344,16 +343,14 @@ h3 {
   
 /* The Close Button for Modal */
 .close {
-    position: relative;
-    right: -98%;
-    top: -102%;
+    position: fixed;
+    align-self: flex-end;
     color: #aaaaaa;
-    float: right;
-    font-size: 28px;
+    font-size: 1.25rem;
     font-weight: bold;
-    width: 2rem;
-    height: 2rem;
-    border: 5px solid #aaaaaa;
+    width: 1.5rem;
+    height: 1.5rem;
+    border: 3px solid #aaaaaa;
     background-color: #ffffff;
     border-radius: 50%;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -389,15 +386,29 @@ h3 {
     align-content: center;
     gap: none;
     background-color: #ffffff;
-    border-radius: 2em;
+    border-radius: 1rem;
     width: 85%;
     height: 65vh;
-    max-height: 650px;
+    max-height: 640px;
     max-width: 650px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 1rem;
+    padding: 0.5rem;
     box-shadow: rgba(0, 0, 0, 0.4) 0px 30px 90px;
+    margin: auto auto;
+    overflow: auto;
+}
+
+#static-walkthrough-modal h2 {
+    font-size: 2rem;
+    margin-top: 1rem;
+    margin-bottom: 0.75rem;
+}
+
+#modal-instructions h3 {
+    font-size: 1.5rem;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    padding-bottom: 0.75rem;
+    border-bottom: 2px solid #445361;
 }
 
 #modal-instructions {
@@ -405,6 +416,7 @@ h3 {
     align-self: center;
     flex-direction: column;
     width: 90%;
+    height: fit-content;
     background-color: #ececec;
     padding: 1rem;
     border-radius: 1rem;
@@ -440,16 +452,14 @@ h3 {
   
 /* The Close Button for Modal*/
 .close-walkthrough-modal {
-    position: relative;
-    right: -98%;
-    top: -102%;
+    position: fixed;
+    align-self: flex-end;
     color: #aaaaaa;
-    float: right;
-    font-size: 28px;
+    font-size: 1.25rem;
     font-weight: bold;
-    width: 2rem;
-    height: 2rem;
-    border: 5px solid #aaaaaa;
+    width: 1.5rem;
+    height: 1.5rem;
+    border: 3px solid #aaaaaa;
     background-color: #ffffff;
     border-radius: 50%;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -469,15 +479,15 @@ h3 {
     align-content: center;
     gap: none;
     background-color: #ffffff;
-    border-radius: 2em;
+    border-radius: 1rem;
     width: 85%;
     height: 65vh;
-    max-height: 750px;
-    max-width: 700px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 1rem;
+    max-height: 725px;
+    max-width: 650px;
+    padding: 0.5rem;
     box-shadow: rgba(0, 0, 0, 0.4) 0px 30px 90px;
+    margin: auto auto;
+    overflow: auto;
 }
 
 .modal-keyboard-layout {
@@ -487,13 +497,13 @@ h3 {
 #modal-two-instructions {
     display: flex;
     align-self: center;
-    align-content: center;
     flex-direction: column;
     width: 90%;
-    background-color: #ececec;
+    height: fit-content;
     padding: 1rem;
     border-radius: 1rem;
 }
+
 #modal-two-instructions p {
     text-align: left;
     font-size: 1rem;
@@ -506,28 +516,28 @@ h3 {
     display: flex;
     flex-direction: column;
     align-content: center;
-    border: 2px solid #88c7cc;
     border-radius: 1rem;
-    width: 60%;
+    width: 100%;
     margin: auto;
+    background-color: #88c7cc36;
 }
 
 #modal-difficulty-selection p {
     text-align: center;
+    font-size: 1rem;
+    margin-top: 1rem;
 }
 
 /* The Close Button */
 .close-walkthrough-modal-two {
-    position: relative;
-    right: -99%;
-    top: -104%;
+    position: fixed;
+    align-self: flex-end;
     color: #aaaaaa;
-    float: right;
-    font-size: 28px;
+    font-size: 1.25rem;
     font-weight: bold;
-    width: 2rem;
-    height: 2rem;
-    border: 5px solid #aaaaaa;
+    width: 1.5rem;
+    height: 1.5rem;
+    border: 3px solid #aaaaaa;
     background-color: #ffffff;
     border-radius: 50%;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
